# FTT5_server

./: .gitignore  Dockerfile  docker-compose.yml  template.env
.docker/nvim/: lazy-lock.json  lazyvim.json
.docker/nvim/lua/config/: autocmds.lua  lazy.lua  options.lua
.docker/nvim/lua/plugins/: formatter.lua
server_preparation/: 01.install_docker.sh  02.install_cuda.sh
workspace/: pyproject.toml
workspace/src/: config.py  exceptions.py  lifespan.py  main.py  main_temp.py  model.py
workspace/src/api/: tts.py  whisper.py
workspace/src/schemas/: audio.py  job.py  similarity.py  tts.py  tts_manager.py  whisper.py
workspace/src/services/: audio_processor.py  generation_plan.py  job.py  job_executor.py  lifespan.py  temp_files.py  text_preprocessor.py  text_similarity.py  tts.py  tts_manager.py  whisper.py
workspace/src/utils/: downloader.py  generate_tree.py  openapi_examples.py
