[project]
name = "workspace"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi (>=0.138.1,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "f5-tts (>=1.1.20,<2.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "audiostretchy (>=1.3.5,<2.0.0)",
    "faster-whisper (>=1.2.1,<2.0.0)",
    "rapidfuzz (>=3.14.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
